[package]
name = "sistema_operatum"
version = "0.1.0"
author = ["Danil Chernenko <game.gt.tutor@gmail.com>"]
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
